fill out bedrock projects

--- a/minecraft/index.html
+++ b/minecraft/index.html
@@ -36,7 +36,7 @@
                     <div class="cardHeader">
                       Featured
                     </div>
-                    <img class="card_img" src="/assets/minecraft/CMCB_Thumbnail_0.jpg">
+                    <img class="card_img" src="/assets/minecraft/bedrock/CMCB_Thumbnail_0.jpg">
                     <div class="card_text">
                       <h5 class="content_title">Craftee's MC But...</h5>
                       <p>It's Minecraft But... with Craftee! Try and help Craftee escape all while surviving the crazy challenges by the developers</p>
@@ -45,7 +45,63 @@
                   </div>
                 <div class="cardGrid">
                     <div class="content_card">
-                        <img class="card_img" src="/assets/minecraft/LMM_Thumbnail_0.jpg">
+                        <img class="card_img" src="/assets/minecraft/bedrock/Gobs_of_Mobs_F.png">
+                        <div class="card_text">
+                          <h5 class="content_title">Gobs of Mobs [DX]</h5>
+                          <p>Enhance your survival world with even more mobs! From Dragonflies to Ore Sniffers to Werewolves, your world will be teaming with life! Some mobs you can tame, and some mobs will attack.</p>
+                          <a href="https://www.minecraft.net/en-us/marketplace/pdp?id=23b73ffc-440c-4b99-adb9-df5167cb2471" class="button buttonRegular">Check it out!</a>
+                        </div>
+                    </div> <!-- card -->
+                    <div class="content_card">
+                        <img class="card_img" src="/assets/minecraft/bedrock/Biome_Creepers_D.png">
+                        <div class="card_text">
+                          <h5 class="content_title">Biome Creepers</h5>
+                          <p>From the rare gold creeper that spawns in the deepest caves, to the dreaded wither creeper that explodes into wither skulls, capture these creepers to use their power on your own world!</p>
+                          <a href="https://www.minecraft.net/en-us/marketplace/pdp?id=fd01430a-4b20-4828-9b5b-cdd6780cce1d" class="button buttonRegular">Check it out!</a>
+                        </div>
+                    </div> <!-- card -->
+                    <div class="content_card">
+                        <img class="card_img" src="/assets/minecraft/bedrock/boss_mob_weapons (1).png">
+                        <div class="card_text">
+                          <h5 class="content_title">Boss Mob Weapons</h5>
+                          <p>The Elder Guardian, Wither, Warden and Ender Dragon have become infused with ancient evil energy. To survive, you must use their own powers against them! Wield special morphing boss weapons, complete the challenges, and unlock the powers of the 4 boss mobs.</p>
+                          <a href="https://www.minecraft.net/en-us/marketplace/pdp?id=6cd62bdb-5107-4af1-916f-d85bb54f0efc" class="button buttonRegular">Check it out!</a>
+                        </div>
+                    </div> <!-- card -->
+                    <div class="content_card">
+                        <img class="card_img" src="/assets/minecraft/bedrock/Craftee Weapons Key Art D.png">
+                        <div class="card_text">
+                          <h5 class="content_title">Craftee Weapons</h5>
+                          <p>Craftee’s home has been invaded and only you can help defend it! Burn monsters with the Flamethrower, flatten them with the Squash Mallet or even smash them with a guitar! Can you craft all the hilarious weapons and save Craftee before the big bad Aggroboss arrives</p>
+                          <a href="https://www.minecraft.net/en-us/marketplace/pdp?id=950f1ac7-d077-4cd2-ab25-a95825e03ed2" class="button buttonRegular">Check it out!</a>
+                        </div>
+                    </div> <!-- card -->
+                    <div class="content_card">
+                        <img class="card_img" src="/assets/minecraft/bedrock/TNT_Mobs_Key_Art_K.png">
+                        <div class="card_text">
+                          <h5 class="content_title">TNT as Mobs</h5>
+                          <p>TNT Mobs have arrived! Watch out because they each have unique explosive abilities. Explore the wilderness and locate their dungeons. Or take out a sniffer pet and follow their scent.</p>
+                          <a href="https://www.minecraft.net/en-us/marketplace/pdp?id=1081dc10-7d2d-436b-9cf3-a0364f291709" class="button buttonRegular">Check it out!</a>
+                        </div>
+                    </div> <!-- card -->
+                    <div class="content_card">
+                        <img class="card_img" src="/assets/minecraft/bedrock/Enderman_Morph_Key_Art_F.png">
+                        <div class="card_text">
+                          <h5 class="content_title">Enderman Morph</h5>
+                          <p>Evil Endermen are corrupting the Overworld! The only way to stop them is to morph into them and use their powers against them!</p>
+                          <a href="https://www.minecraft.net/en-us/marketplace/pdp?id=7afa439b-2fe4-413b-a726-6ae896e16e03" class="button buttonRegular">Check it out!</a>
+                        </div>
+                    </div> <!-- card -->
+                    <div class="content_card">
+                        <img class="card_img" src="/assets/minecraft/bedrock/CMCB_Thumbnail_0.jpg">
+                        <div class="card_text">
+                          <h5 class="content_title">Craftee's MC But...</h5>
+                          <p>It's Minecraft But... with Craftee! Try and help Craftee escape all while surviving the crazy challenges by the developers</p>
+                          <a href="https://www.minecraft.net/en-us/marketplace/pdp?id=805101ce-e99c-49be-87ee-8b779ae78e60" class="button buttonRegular">Check it out!</a>
+                        </div>
+                    </div> <!-- card -->
+                    <div class="content_card">
+                        <img class="card_img" src="/assets/minecraft/bedrock/LMM_Thumbnail_0.jpg">
                         <div class="card_text">
                           <h5 class="content_title">Lucky's Minigame Mayhem</h5>
                           <p>A Minecraft Marketplace Project commissioned by Microsoft for the yearly Marketplace Celebration. Play through 15 minigames celebrating the diversity of Marketplace content</p>
@@ -53,7 +109,7 @@
                         </div>
                     </div> <!-- card -->
                     <div class="content_card">
-                        <img class="card_img" src="/assets/minecraft/BP_Thumbnail_0.jpg">
+                        <img class="card_img" src="/assets/minecraft/bedrock/BP_Thumbnail_0.jpg">
                         <div class="card_text">
                           <h5 class="content_title">Biome Pets</h5>
                           <p>Craft 30+ unique pets each themed off of biomes in Minecraft! Evolve them to help defend you in battle!</p>
@@ -61,24 +117,51 @@
                         </div>
                     </div> <!-- card -->
                     <div class="content_card">
+                        <img class="card_img" src="/assets/minecraft/bedrock/New Arcade Parkour Key Art A2.png">
                         <div class="card_text">
-                          <h5 class="content_title">Lucky's Minigame Mayhem</h5>
-                          <p>A Minecraft Marketplace Project commissioned by Microsoft for the yearly Marketplace Celebration. </p>
-                          <a href="luckys/" class="button buttonRegular">Check it out!</a>
+                          <h5 class="content_title">Arcade Parkour</h5>
+                          <p>Are you the ultimate Parkour Master? Prove your skills with these 10 retro parkour maps. Collect all the hidden coins, snag the epic parkour trophies and unlock the secret bonus portal parkour level! Race your friends to get the fastest time.</p>
+                          <a href="https://www.minecraft.net/en-us/marketplace/pdp?id=6d95b211-a26f-4a51-8b87-24814505c67d" class="button buttonRegular">Check it out!</a>
                         </div>
                     </div> <!-- card -->
                     <div class="content_card">
+                        <img class="card_img" src="/assets/minecraft/bedrock/UMT_MarketingKeyArt.png">
                         <div class="card_text">
-                          <h5 class="content_title">MCCreations</h5>
-                          <p>A Minecraft Community site I built from the ground up using Wix. I am currently working on moving this to a custom Node.JS application maybe you'll see that here some day instead!</p>
-                          <a href="https://mccreations.net" class="button buttonRegular">Check it out!</a>
+                          <h5 class="content_title">Ultra Mob Totems</h5>
+                          <p>Enhance your game with these overpowered mob totems! Destroy threats with Elder Guardian beams. Fire off your very own Warden sonic blast. Launch Wither Skulls at your friends or even use the Ender Dragon’s power against it!</p>
+                          <a href="https://www.minecraft.net/en-us/marketplace/pdp?id=b973bf4f-8a38-4102-a2a5-0a5e3b8f957e" class="button buttonRegular">Check it out!</a>
                         </div>
                     </div> <!-- card -->
                     <div class="content_card">
+                        <img class="card_img" src="/assets/minecraft/bedrock/Cursed_Dragons_Key_Art-A5.png">
                         <div class="card_text">
-                          <h5 class="content_title">Roodit</h5>
-                          <p>A mockup social media site created for my Internet Programming final with a team of 3 other students. Uses Node.js, Express and MySQL and includes accounts, and making and liking posts!</p>
-                          <a href="https://replit.com/@BenjaminMeier/Team-14-Final-Project" class="button buttonRegular">Check it out!</a>
+                          <h5 class="content_title">Cursed Dragons</h5>
+                          <p>You ain't seen dragons like these! Assemble the Furniture! Survive with the Skyblock! Glitch out with the Hacker! Go pro with the Speedrunner! With over 15 cursed creatures, unique weapons, epic boss fights… and one grandpa creeper, open the secret mountain base and free the GIGA DRAGON!</p>
+                          <a href="https://www.minecraft.net/en-us/marketplace/pdp?id=8dcbc7f5-eb57-43ea-a8dc-ff03ec5d3c88" class="button buttonRegular">Check it out!</a>
+                        </div>
+                    </div> <!-- card -->
+                    <div class="content_card">
+                        <img class="card_img" src="/assets/minecraft/bedrock/Minecraft_if_there_were_Jungle_Bosses-C.png">
+                        <div class="card_text">
+                          <h5 class="content_title">Tarzan Jungle Bosses</h5>
+                          <p>Tarzan has been captured and only you can free him from his cage! Use special weapons like the blowgun, dynamite, and the Barrel Bouncer. Collect the golden bananas and win the Banana Blaster! Defeat the king of primates and his boss minions, free Tarzan and save the village.</p>
+                          <a href="https://www.minecraft.net/en-us/marketplace/pdp?id=be9729ba-85e3-4013-af70-4e9cb46a00a2" class="button buttonRegular">Check it out!</a>
+                        </div>
+                    </div> <!-- card -->
+                    <div class="content_card">
+                        <img class="card_img" src="/assets/minecraft/bedrock/MobWeaponsKeyart_B3.png">
+                        <div class="card_text">
+                          <h5 class="content_title">Mob Weapons</h5>
+                          <p>Finally you can wield the most epic weapons in Minecraft! Blast open walls with the Creeper Cannon! Slice enemies with the Axelotl! Knock ‘em out with the Foxing Gloves! Smash foes with the Warden Hammer! Or even fly around on your very own Baby Dragon!</p>
+                          <a href="https://www.minecraft.net/en-us/marketplace/pdp?id=696299cb-ed7f-4681-b45d-b926795d1f68" class="button buttonRegular">Check it out!</a>
+                        </div>
+                    </div> <!-- card -->
+                    <div class="content_card">
+                        <img class="card_img" src="/assets/minecraft/bedrock/MobMechs_MarketingKeyArt.png">
+                        <div class="card_text">
+                          <h5 class="content_title">Mob Mechs</h5>
+                          <p>Feel the power of Mob Mechs! Drive giant robot mobs like the Creeper, Villager and Wither. Break walls, fire weapons and destroy enemy piglin mechs! Get new parts to craft even more robot mobs. Visit the End and take down the Ender Dragon!</p>
+                          <a href="https://www.minecraft.net/en-us/marketplace/pdp?id=d10a02ab-a6c1-4315-b556-991008ddd2c9" class="button buttonRegular">Check it out!</a>
                         </div>
                     </div> <!-- card -->
                 </div> <!-- cardGrid -->
