fix about an contact, remove mastodon

--- a/about/index.html
+++ b/about/index.html
@@ -3,20 +3,32 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
-        <title>CrazyCowMM | About</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <title>Ben Meier | About</title>
+       
+        <link rel="stylesheet" type="text/css" href="/styles/global.css">
     </head>
     <body>
-        <nav>
-            <header>
-                CrazyCowMM
-            </header>
-            <div>
-                <button type="button">Home</button>
-                <button type="button">Projects</button>
-                <button type="button">About</button>
-                <button type="button">Contact</button>
-            </div>
+        <nav class="mainNav">
+            <ul class="navList">
+                <li class="navItem">
+                    <p class="navBrand">Ben Meier</p>
+                </li>
+                <li class="navItem">
+                    <a class="navLink" href="/">Home</a>
+                </li>
+                <li class="navItem">
+                    <a class="navLink" href="/projects">Projects</a>
+                </li>
+<li class="navItem">
+                    <a class="navLink" href="/minecraft">Minecraft</a>
+                </li>
+                <li class="navItem">
+                    <a class="navLink navLinkSelected" href="/about">About</a>
+                </li>
+                <li class="navItem">
+                    <a class="navLink" href="/contact">Contact</a>
+                </li>
+            </ul>
         </nav>
         <main>
             
