--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
         </main>
         <footer>
             <div class="socialGrid">
-                <div class="socialIcon">
+                <!-- <div class="socialIcon">
                     <a rel="me" href="https://mstdn.games/@crazycowmm"><img src="assets/icons/mastodon.svg"></a>
-                </div>
+                </div> -->
                 <div class="socialIcon">
                     <a href="https://twitter.com/crazycowmm"><img src="assets/icons/twitter.svg"></a>
                 </div>
