--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
                 <!-- Splash Image -->
                 <div class="splashBackground">
                     <div class="splashHalf">
-                        <img id="splashImage" alt="Pretty splash image" src="assets/splashes/raytracer.png">
+                        <img id="splashImage" alt="Pretty splash image" src="assets/splashes/cs/1.png">
                     </div>
                     <div class="splashHalf">
-                        <img id="splashImage" alt="Pretty splash image" src="assets/splashes/1.jpg">
+                        <img id="splashImage" alt="Pretty splash image" src="assets/splashes/minecraft/1.jpg">
                     </div>
                 </div>
                 <!-- Splash Text -->
@@ -48,10 +48,60 @@
                 </div>
             </div>
             <!-- Content -->
-            <div>
+            <div class="pageContent">
                 <!-- Favorite Projects -->
-                <div>
-
+                <h1>Favorite Projects</h1>
+                <div class="projectScroll">
+                    <div class="content_card">
+                        <div class="card_img">
+                            <img src="/assets/projects/solar_system.png">
+                        </div>
+                        <div class="card_text">
+                          <h5 class="content_title">WebGL Solar System</h5>
+                          <p>A solar system built in WebGL from scratch. Utilizing Phong and point lighting, textures and shaders. This project is the culmination of techniques learned in the WebGL Programming Journal.</p>
+                          <a href="solar_system/" class="button buttonRegular">Check it out!</a>
+                        </div>
+                    </div> <!-- card -->
+                    <div class="content_card">
+                        <div class="card_img">
+                            <img src="/assets/projects/mccreations_next/defaultBanner.png">
+                        </div>
+                        <div class="card_text">
+                          <h5 class="content_title">MCCreations Next</h5>
+                          <p>The next generation of MCCreations with a Next.js frontend and a Node.js - Express backend using MongoDB</p>
+                          <a href="https://next.mccreations.net" class="button buttonRegular">Check it out!</a>
+                        </div>
+                    </div> <!-- card -->
+                    <div class="content_card">
+                        <div class="card_img">
+                            <img src="/assets/minecraft/bedrock/boss_mob_weapons (1).png">
+                        </div>
+                        <div class="card_text">
+                          <h5 class="content_title">Boss Mob Weapons</h5>
+                          <p>The Elder Guardian, Wither, Warden and Ender Dragon have become infused with ancient evil energy. To survive, you must use their own powers against them! Wield special morphing boss weapons, complete the challenges, and unlock the powers of the 4 boss mobs.</p>
+                          <a href="https://www.minecraft.net/en-us/marketplace/pdp?id=6cd62bdb-5107-4af1-916f-d85bb54f0efc" class="button buttonRegular">Check it out!</a>
+                        </div>
+                    </div> <!-- card -->
+                    <div class="content_card">
+                        <div class="card_img">
+                            <img src="/assets/minecraft/bedrock/Craftee Weapons Key Art D.png">
+                        </div>
+                        <div class="card_text">
+                          <h5 class="content_title">Craftee Weapons</h5>
+                          <p>Craftee’s home has been invaded and only you can help defend it! Burn monsters with the Flamethrower, flatten them with the Squash Mallet or even smash them with a guitar! Can you craft all the hilarious weapons and save Craftee before the big bad Aggroboss arrives</p>
+                          <a href="https://www.minecraft.net/en-us/marketplace/pdp?id=950f1ac7-d077-4cd2-ab25-a95825e03ed2" class="button buttonRegular">Check it out!</a>
+                        </div>
+                    </div> <!-- card -->
+                    <div class="content_card">
+                        <div class="card_img">
+                            <img src="/assets/minecraft/bedrock/LMM_Thumbnail_0.jpg">
+                        </div>
+                        <div class="card_text">
+                          <h5 class="content_title">Lucky's Minigame Mayhem</h5>
+                          <p>A Minecraft Marketplace Project commissioned by Microsoft for the yearly Marketplace Celebration. Play through 15 minigames celebrating the diversity of Marketplace content</p>
+                          <a href="https://www.minecraft.net/en-us/pdp.html?id=b569f904-769f-4de7-a929-3dd9f1555fa1" class="button buttonRegular">Check it out!</a>
+                        </div>
+                    </div> <!-- card -->
                 </div>
                 <!-- Work History -->
                 <div>
